src/objects/Meeting_Role__c.object
<CustomObject>
    <description>Roles for meetings dept per event</description>
    <fields>
        <fullName>AC_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AC Event</label>
        <referenceTo>BR_Event__c</referenceTo>
        <relationshipLabel>Meeting Roles</relationshipLabel>
        <relationshipName>Meeting_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Meetings Manager</fullName>
                </value>
                <value>
                    <fullName>Meetings Associate/Coordinator</fullName>
                </value>
                <value>
                    <fullName>Registration Contact</fullName>
                </value>
                <value>
                    <fullName>Program Staff</fullName>
                </value>
                <value>
                    <fullName>Program Owner</fullName>
                </value>
                <value>
                    <fullName>Creative Services &amp; Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Meeting_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Meeting Role</label>
    <nameField>
        <label>Meeting Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>